--- a/KAU_Project/Views/Home/Index.cshtml
+++ b/KAU_Project/Views/Home/Index.cshtml
@@ -2,7 +2,127 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container" style="height:550px">
+
+    <div class="jumbotron text-left" style="background-color: #8BC73B;background: rgba(139, 199, 59, 0.6); height: 250px">
+        <div class="container" style="height:130px">
+
+            <h1>مركز إعداد قيادات المستقبل</h1>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width:270px; height:150px;">
+                    <img class="card-img-top" alt="Card image" style="width:100%">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width: 270px; height:150px;">
+                    <img class="card-img-top" alt="Card image" style="width: 100%;" />
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width:270px; height:150px">
+                    <img class="card-img-top" alt="Card image" style="width:100%;">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width:270px; height:150px;">
+                    <img class="card-img-top" alt="Card image" style="width:100%">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width: 270px; height:150px;">
+                    <img class="card-img-top" alt="Card image" style="width: 100%;" />
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card img-fluid" style="width:270px; height:150px">
+                    <img class="card-img-top" alt="Card image" style="width:100%;">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn" style="background-color: #8BC73B;padding-bottom:20; ">سجل هنا</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
+<hr />
+<div class="container">
+    <div class="text-center">
+        <h2>الرؤية والرسالة</h2>
+    </div>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-4">
+            <h2 class="text-center">الرؤية</h2>
+            <p>
+                العمل على بناء كوادر قيادية ناجحة ومبدعة في مختلف القطاعات
+
+            </p>
+        </div>
+        <div class="col-3">
+            <img src="~/images/image.jpg" style="width:150px; height:150px;" />
+        </div>
+        <div class="col-4">
+            <h2 class="text-center">الرسالة</h2>
+            <p>
+                المرجعية الاحترافية في إعداد وتنمية القيادات المستقبلية
+
+
+            </p>
+        </div>
+    </div>
+
+
+</div>
+
+<hr />
+<div class="container">
+    <div class="text-center">
+        <h2>تواصل معنا</h2>
+    </div>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-6 text-right">
+            <p>0056668585</p>
+            <p>
+                center@kau.sa
+            </p>
+            <p>
+                6508 عبدالله سليمان،، جامعة الملك عبدالعزيز، 3092، جدة 21589
+            </p>
+
+        </div>
+
+    </div>
+
+
+</div>
+
+
